# ar_control_live_studio

./: CMakeLists.txt  README.md  analysis_options.yaml  analyze_output.txt  mocks.dart  pubspec.yaml  source_selector.dart
.github/agents/: ar-control-live-studio.agent.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ar_control_live_studio/: MainActivity.kt
assets/audio/Expresiones (Celebraciones y Asombros)/: Ahh___ efecto de sonido(M4A_128K).m4a
assets/audio/Golpes y Caidas/: ahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.m4a  jai jai.m4a  uy jajaaaaaaaaaaaaaa.m4a
assets/audio/Gritoss/: vegetaaaa.m4a
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ar_control_live_studio_texture_plugin.cpp  ar_control_live_studio_texture_plugin.h  camera_hal.dart  globals.dart  hal.dart  main.dart  master_scaffold.dart  remote_source_hal.dart  replay_source_hal.dart
lib/config/: app_config.dart
lib/core/: CMakeLists.txt  active_nodes_provider.dart  ai_engine.dart  app_event_bus.dart  app_session.dart  audio_engine.dart  broadcast_master_engine.dart  cloud_sync_engine.dart  cyberpunk_theme.dart  dj_engine.dart  event_bus.dart  hal.dart  macro_editor_view.dart  macro_engine.dart  macro_panel.dart  master_scaffold.dart  midi_controller.dart  midi_mapping_service.dart  midi_mapping_view.dart  midi_service.dart  multi_device_manager.dart  native_audio_plugin.dart  native_texture_plugin.dart  node_discovery_service.dart  node_manager.dart  overlay_engine.dart  performance_monitor_service.dart  ptz_controller.dart  ptz_engine.dart  recording_engine.dart  replay_bindings.dart  replay_engine.cpp  replay_engine.dart  replay_engine.h  rtmp_stream_engine.dart  settings_provider.dart  streaming_engine.dart  switcher_engine.dart  thermal_manager.dart
lib/core/errors/: app_errors.dart
lib/core/hal/: camera_hal.dart  hal.dart  replay_source_hal.dart
lib/core/network/: node_discovery_service.dart
lib/core/theme/: cyberpunk_theme.dart
lib/modules/: analytics_dashboard.dart  audio_mixer_screen.dart  audio_module.dart  cloud_sync_module.dart  dj_control_screen.dart  dj_pro_engine_advanced.dart  dj_pro_module.dart  drone_control_screen.dart  drone_engine.dart  hardware_engine.dart  log_engine.dart  log_viewer_screen.dart  main_dashboard.dart  ndi_control_screen.dart  ndi_stream_engine.dart  network_engine.dart  overlay_control_screen.dart  overlay_module.dart  pro_mode_view.dart  replay_engine.dart  screen_recorder_engine.dart  splash_screen.dart  sports_control_screen.dart  sports_engine.dart  sports_engine_advanced.dart  sports_module.dart  stream_module.dart  system_logs.dart  video_module.dart
lib/nodes/: node_base.dart  remote_camera_node.dart
lib/nodes/camera/: camera_node.dart
lib/nodes/engine/: engine_node.dart
lib/nodes/player/: player_node.dart
lib/nodes/remote/: remote_node.dart
lib/providers/: app_session.dart  app_state.dart
lib/services/: error_handler.dart  platform_service.dart  service_locator.dart
lib/ui/: audio_mixer.dart  boot_sequence_view.dart  control_button.dart  cyberpunk_theme.dart  dashboard.dart  footer.dart  help_view.dart  layout.dart  main_selector_view.dart  master_scaffold.dart  node_selector.dart  placeholder_view.dart  pro_mode_view.dart  route_generator.dart  settings_view.dart  status_view.dart  stream_engine_workspace.dart  themes.dart
lib/ui/camera/: camera_client_view.dart
lib/ui/controls/: ai_control.dart  dj_control.dart  overlay_control.dart  ptz_control.dart  record_control.dart  replay_engine.h  stream_control.dart  thermal_control.dart
lib/ui/engine/: engine_studio_view.dart
lib/ui/player/: common_widgets.dart  player_view.dart  player_view_provider.dart
lib/ui/remote/: CMakeLists.txt  ar_control_live_studio_audio_plugin.cpp  ar_control_live_studio_audio_plugin.h  build_native.bat  build_native.sh  remote_control_view.dart  replay_engine.cpp
lib/ui/shared/widgets/: audio_mixer.dart  common_widgets.dart  control_button.dart  macro_panel.dart  status_view.dart
lib/ui/views/: macro_editor_view.dart  pro_mode_view.dart  remote_camera_node_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
